--- a/songbird/src/styles/components/_score.scss
+++ b/songbird/src/styles/components/_score.scss
@@ -1,4 +1,5 @@
 .score {
+  margin: 0;
   font-size: var(--fs-600);
   font-family: var(--ff-title);
   text-transform: uppercase;
